Fixing overflow issues for mobile response: projects.html

--- a/styles.css
+++ b/styles.css
@@ -824,11 +824,6 @@ footer {
 
 
 @media only screen and (min-width: 0px) and (max-width: 360px) {
-    * {
-        overflow: auto;
-        box-sizing: border-box;
-    }
-    
     .navbar {
         flex-direction: row;
         align-items: center;
